import "Ws.proto";
package Opal;

option java_package = "org.obiba.opal.web.model";

message FunctionalUnitDto {
  required string name = 1;
  required string keyVariableName = 2;
  optional string select = 3;
}

enum KeyType {
  KEY_PAIR = 0;
  CERTIFICATE = 1;
}
 
message KeyDto {
  required string alias = 1;
  required string certificate = 2;
  required KeyType keyType = 3;
}
 
message KeyForm {
  required string alias = 1;
 
  optional PrivateKeyForm privateForm = 2;
  optional string privateImport = 3;
 
  optional PublicKeyForm publicForm = 4;
  optional string publicImport = 5;
  optional string certificateFile = 6;
 
  required KeyType keyType = 7;
}
 
message PrivateKeyForm {
  required string algo = 1;
  required int32 size = 2; 
}
 
message PublicKeyForm {
  required string name = 1;
  required string organizationalUnit = 2;
  required string organization = 3;
  required string locality = 4;
  required string state = 5;
  required string country = 6;
}

message FileDto {
  required string name = 1;
  required string path = 2;
  enum FileType {
    FILE = 0;
    FOLDER = 1;
  }
  required FileType type = 3;
  repeated FileDto children = 4;
  optional int64 size = 5;
  optional int64 lastModifiedTime = 6;
}

message LocaleDto {
  required string name = 1;    // Locale.toString()
  optional string display = 2; // Locale.getDisplayName(clientLocale)
}

message JdbcDriverDto {
  required string driverName = 1;  // e.g., "MySQL 5.1"
  required string driverClass = 2; // e.g., "com.mysql.jdbc.Driver"
  required string jdbcUrlTemplate = 3; // e.g., "jdbc:mysql://{hostname}:{port}/{databaseName}"
  optional string version = 4;
}

message JdbcDataSourceDto {
  required string name = 1;
  required string url = 2;
  required string driverClass = 3;
  required string username = 4;
  optional string password = 5;
  optional bool editable = 6 [default = true];
  optional string properties = 7;
}

message ReportTemplateDto {
  required string name = 1;
  required string design = 2;
  required string format = 3;
  repeated ParameterDto parameters = 4;
  optional string cron = 5;
  repeated string emailNotification = 6;
}

message ReportDto {
  required string name = 1;
  required string link = 2;
  optional string publicLink = 3;
  optional int64 size = 4;
  optional int64 lastModifiedTime = 5;
}

message ParameterDto {
  required string key = 1;
  required string value = 2;
}

message Subject {
  enum SubjectType {
    USER = 0;
    GROUP = 1;
  }
  required string principal = 1;
  required SubjectType type = 2;
}

message Acl {
  required Subject subject = 1;
  required string resource = 2;
  repeated string actions = 3;
  required string domain = 4;
}

message Acls {
  required Subject subject = 1;
  repeated Acl acls = 2;
}

enum AclAction {
  DATASOURCE_ALL = 0;
  CREATE_TABLE = 1;
  CREATE_VIEW = 2;
  TABLE_ALL = 3;
  TABLE_READ = 4;
  TABLE_VALUES = 5;
  TABLE_EDIT = 6;
  VIEW_ALL = 7;
  VIEW_READ = 8;
  VIEW_VALUES = 9;
  VIEW_EDIT = 10;
  VIEW_VALUES_EDIT = 11;
  VARIABLE_READ = 12;
  DATABASES_ALL = 13;
  R_SESSION_ALL = 14;
  DATASHIELD_ALL = 15;
  DATASHIELD_SESSION_ALL = 16;
  FILES_META = 17;
  FILES_ALL = 18;
  FILES_READ = 19;
  FILES_ADD = 20;
  REPORT_TEMPLATE_ALL = 21;
  REPORT_TEMPLATE_READ = 22;
}

message OpalMap {
  repeated string keys = 1;
  repeated string values = 2;
}

message EntryDto {
  required string key = 1;
  required string value = 2;
}


enum ServiceStatus {
  RUNNING = 1;
  STOPPED = 2;
}

message ServiceDto {
  required string name = 1;
  required ServiceStatus status = 2;
  required string link = 3;
}

message ServiceCfgDto {
  required string name = 1; // service name
  extensions 1000 to max;
}

message ESCfgDto {
  required string clusterName = 1;
  optional string indexName = 2;
  required bool dataNode = 3 [default = true];
  required int32 shards = 4;
  required int32 replicas = 5;
  optional string settings = 6;
  optional bool enabled = 7;
  extend ServiceCfgDto {
    optional ESCfgDto params = 1000;
  }
}