package Plugins;

option java_package = "org.obiba.opal.web.model";

message PropertyDto {
    required string key = 1;
    required string value = 2;
}

message PluginDto {
    required string name = 1;
    required string title = 2;
    required string description = 3;
    required string version = 4;
    required string opalVersion = 5;
    repeated PropertyDto properties = 6;
    optional string type = 7;
}

message VCFStoreDto {
    required string name = 1;
    repeated string vcf = 2; // VCF file names
    required int32 samplesCount = 3;
}

message VCFSummaryDto {
    required string name = 1; // VCF file name
    required int64 size = 2; // VCF file size
    required int32 samplesCount = 3;
    required int32 variantsCount = 4;
    required int32 genotypesCount = 5;
    optional VCFSamplesSummaryDto samplesSummary = 6;
}

message VCFSamplesMappingDto {
    required string projectName = 1;
    required string tableName = 2;
    required string participantIdVariable = 3;
    required string sampleIdVariable = 4;
    required string sampleRoleVariable = 5;
}

message VCFSamplesSummaryDto {
    optional int64 participants = 1;
    optional int64 participantsWithGenotype = 2;
    optional int64 samples = 3;
    optional int64 controlSamples = 4;
    optional int64 orphanSamples = 5;
}
